--- a/training/FormacioCentreTreball1.html
+++ b/training/FormacioCentreTreball1.html
@@ -50,7 +50,7 @@
                         <h2 style="color:#12d640">Formació en Centre de Treball [FCT]</h2>
                         <ul>
                             <li><strong>Centre</strong>: Happy Customer Box</li>
-                            <li><strong>Data</strong>: Octubre 2021 - Actualitat</li>
+                            <li><strong>Data</strong>: Octubre 2021 - Març 2022</li>
                             <li><strong>Lloc Web</strong>: <a href="https://www.happycustomerbox.com/es/" target="_blank">Enllaç</a></li>
                         </ul>
 
