--- a/training/FormacionCentroTrabajo1.html
+++ b/training/FormacionCentroTrabajo1.html
@@ -50,7 +50,7 @@
                         <h2 style="color:#12d640">Formación en Centro de Trabajo - Happy Customer Box</h2>
                         <ul>
                             <li><strong>Centro</strong>: Happy Customer Box</li>
-                            <li><strong>Fecha</strong>: Octubre 2021 - Actualidad</li>
+                            <li><strong>Fecha</strong>: Octubre 2021 - Marzo  2022</li>
                             <li><strong>Sitio Web</strong>: <a href="https://www.happycustomerbox.com/es/" target="_blank">Enlace</a></li>
                         </ul>
                         <p>
