--- a/training/WorkCenterTraining1.html
+++ b/training/WorkCenterTraining1.html
@@ -50,7 +50,7 @@
                         <h2 style="color:#12d640">Work Center Training - Happy Customer Box</h2>
                         <ul>
                             <li><strong>Center</strong>: Happy Customer Box</li>
-                            <li><strong>Date</strong>: October 2019 - Currently</li>
+                            <li><strong>Date</strong>: October 2021 - March 2022</li>
                             <li><strong>Website</strong>: <a href="https://www.happycustomerbox.com/es/"target="_blank">Link</a></li>
                         </ul>
                         <p>
