--- a/projects/ZombieInfection_es.html
+++ b/projects/ZombieInfection_es.html
@@ -68,7 +68,7 @@
                             El juego está enfocado a un público a partir de dieciséis años, el cual le gusten los juegos
                             de lucha contra zombis y supervivencia.
                         </p>
-                        <p><b>NOTICE:</b> at the moment the following document is in Catalan, in the future it will be translated.</p>
+                        <p><b>AVISO:</b> en estos momentos el siguiente documento esta en catalán, en futuro será traducido.</p>
                         <br>
                         <iframe
                             src="https://docs.google.com/document/d/1eTsMdwkSIAcBH0c6dqAe_Bj73BX7Er2ClZIqEjuorgk/preview"
