--- a/ca.html
+++ b/ca.html
@@ -112,28 +112,28 @@
           <img src="assets/img/me.jpg" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <p>Estudiant de cicle formatiu grau superior en Desenvolupament d'Aplicacions Multiplataforma i tècnic en
-            Sistemes Microinformàtics i Xarxes que busca continuar formant-se en el món de la programació.<br>
-            En un futur m'agradaria estudiar els graus superiors <i>Desenvolupament d'Aplicacions Web</i> i
-            <i>Administració de Sistemes Informàtics en Xarxa</i>.
+          <p>Estudiant de cicle formatiu grau superior en Desenvolupament d'Aplicacions Web.<br>
+            Tècnic Superior en Desenvolupament d'Aplicacions Multiplataforma i tècnic en
+            Sistemes Microinformàtics i Xarxes.<br>
+            <!--En un futur m'agradaria estudiar el grau superior <i>Administració de Sistemes Informàtics en Xarxa</i>.-->
           </p>
           <p>
-            Sóc una persona responsable, educada i treballadora que el que cerca és intentar guanyar experiència per a
-            poder continuar adquirint coneixements i formar-se com a futur tècnic informàtic i programador.
+            Soc una persona proactiva, treballadora i amant del món de la informàtica.<br>
+            Tinc ganes d'aportar i desenvolupar els meus coneixements, experiència i motivació en el pròxim projecte en el qual formi part.
+            <!-- Sóc una persona responsable, educada i treballadora que el que cerca és intentar guanyar experiència per a
+            poder continuar adquirint coneixements i formar-se com a futur tècnic informàtic i programador. -->
           </p>
           <div class="row">
             <div class="col-lg-6">
               <ul>
                 <li><i class="icofont-rounded-right"></i> <strong>Data de naixement:</strong> 28 Març 2002</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Ciutat:</strong> Terrassa, España</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Ciutat:</strong> Terrassa, Barcelona, España</li>
               </ul>
             </div>
             <div class="col-lg-6">
               <ul>
-                <li><i class="icofont-rounded-right"></i> <strong>Correu electrònic:</strong>
-                  jaumecadafalchmiro@gmail.com
-                </li>
-                <!--<li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +91 81288 73796</li>-->
+                <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> jaumecadafalchmiro@gmail.com</li> 
+                <!--<li><i class="icofont-rounded-right"></i> <strong>Tel:</strong> +34 622 711 047</li>-->
               </ul>
             </div>
           </div>
@@ -149,11 +149,17 @@
         <h2>Interessos</h2>
       </div>
 
-      <div class="row">
-        <div class="col-lg-3 col-md-4">
+        <div class="row">
+          <div class="col-lg-3 col-md-4 mt-4 mt-lg-0">
+            <div class="icon-box">
+              <i class="ri-android-fill" style="color: #a4c639;"></i>
+              <h3>Desenvolupament d'Aplicacions Android</h3>
+            </div>
+          </div>
+        <div class="col-lg-3 col-md-4 mt-4 mt-lg-0">
           <div class="icon-box">
             <i class="ri-global-line" style="color: #ffbb2c;"></i>
-            <h3>Desenvolupament de Software</h3>
+            <h3>Desenvolupament Web</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
@@ -191,16 +197,16 @@
       <div class="row">
         <div class="col-lg-12" data-aos="fade-up" style="display: inline-block;">
 
-
+          <!-- Desenvolupament d'Aplicacions Web -->
           <div class="col-md-4 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100"
-            style="padding:0px 0px;padding-bottom: 5px;display: inline-block;">
+            style="padding:0px 0px;margin-bottom: 25px;display: inline-block;">
             <img src="assets/img/education/inscopernic.png" class="img-fluid" alt="">
-            <h4 style="text-align:left;"><a href="https://copernic.cat/" target="_blank" style="color:#fff">Institut
+            <h4 style="text-align:left;margin-left: 3px;"><a href="https://copernic.cat/" target="_blank" style="color:#fff">Institut
                 Nicolau Copèrnic</a><br> </h4>
             <p style="text-align:left;color:#fff;padding: 5px 10px;"><em>Cicle Formatiu Grau Superior</em></p>
-            <h5 style="text-align:left;padding: 0px 10px;">Setembre 2020 - Juny 2022</h5>
-            <h6 style="text-align:left;color:#fff;padding: 0px 10px;">Desenvolupament d'Aplicacions Multiplataforma</h6>
-            <ul style="text-align:left;color:#fff;">
+            <h5 style="text-align:left;padding: 0px 10px;">Setembre 2022 - Juny 2023</h5>
+            <h6 style="text-align:left;color:#fff;padding: 5px 10px;">Desenvolupament d'Aplicacions Web</h6>
+            <!--<ul style="text-align:left;color:#fff;">
               <li>Sistemes informàtics</li>
               <li>Bases de dades [MySQL i MongoDB]</li>
               <li>Programació en Java</li>
@@ -215,17 +221,46 @@
               <li>Formació i orientació laboral</li>
               <li>Empresa i iniciativa emprenedora</li>
               <li>Formació en centres de treball</li>
-            </ul>
+            </ul>-->
           </div>
+
+          <!-- Desenvolupament d'Aplicacions Multiplataforma -->
+          <div class="col-md-4 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100"
+            style="padding:0px 0px;margin-bottom: 25px;display: inline-block;">
+            <img src="assets/img/education/inscopernic.png" class="img-fluid" alt="">
+            <h4 style="text-align:left;margin-left: 3px;"><a href="https://copernic.cat/" target="_blank" style="color:#fff">Institut
+                Nicolau Copèrnic</a><br> </h4>
+            <p style="text-align:left;color:#fff;padding: 5px 10px;"><em>Cicle Formatiu Grau Superior</em></p>
+            <h5 style="text-align:left;padding: 0px 10px;">Setembre 2020 - Juny 2022</h5>
+            <h6 style="font-size: 15px;text-align:left;color:#fff;padding: 5px 5px;">Desenvolupament d'Aplicacions Multiplataforma</h6>
+            <!--<ul style="text-align:left;color:#fff;">
+              <li>Sistemes informàtics</li>
+              <li>Bases de dades [MySQL i MongoDB]</li>
+              <li>Programació en Java</li>
+              <li>Llenguatges de marques i sistemes de gestió d'informació</li>
+              <li>Entorns de desenvolupament</li>
+              <li>Accés a dades</li>
+              <li>Desenvolupament d'interfícies</li>
+              <li>Programació multimèdia i dispositius mòbils</li>
+              <li>Programació de serveis i processos</li>
+              <li>Sistemes de gestió empresarial</li>
+              <li>Projecte de desenvolupament d'aplicacions multiplataforma</li>
+              <li>Formació i orientació laboral</li>
+              <li>Empresa i iniciativa emprenedora</li>
+              <li>Formació en centres de treball</li>
+            </ul>-->
+          </div>
+
+          <!-- Sistemes Microinformàtics i Xarxes -->
           <div class="col-md-4 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100"
             style="padding:0px 0px;padding-bottom: 5px;display: inline-block;">
             <img src="assets/img/education/inscopernic.png" class="img-fluid" alt="">
-            <h4 style="text-align:left;"><a href="https://copernic.cat/" target="_blank" style="color:#fff">Institut
+            <h4 style="text-align:left;margin-left: 3px;"><a href="https://copernic.cat/" target="_blank" style="color:#fff">Institut
                 Nicolau Copèrnic</a><br> </h4>
             <p style="text-align:left;color:#fff;padding: 5px 10px;"><em>Cicle Formatiu Grau Mitjà</em></p>
             <h5 style="text-align:left;padding: 0px 10px;">Setembre 2018 - Juny 2020</h5>
-            <h6 style="text-align:left;color:#fff;padding: 0px 10px;">Sistemes Microinformàtics i Xarxes</h6>
-            <ul style="text-align:left;color:#fff;">
+            <h6 style="text-align:left;color:#fff;padding: 5px 5px;">Sistemes Microinformàtics i Xarxes</h6>
+            <!--<ul style="text-align:left;color:#fff;">
               <li>Muntatge i manteniment d'equip</li>
               <li>Sistemes operatius monolloc</li>
               <li>Aplicacions ofimàtiques</li>
@@ -239,7 +274,7 @@
               <li>Formació i orientació laboral</li>
               <li>Empresa i iniciativa empresarial</li>
               <li>Formació en centres de treball</li>
-            </ul>
+            </ul>-->
           </div>
         </div>
       </div>
@@ -333,6 +368,7 @@
       </div>
       <div class="row">
         <div class="col-lg-12" data-aos="fade-up">
+
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
             <h4 style="text-align:left;"><a href="https://www.casadellibro.com/nosotros/tienda/carrer-cremat-15/36"
                 style="color:#12d640">Casa del llibre</a><br> </h4>
@@ -344,6 +380,7 @@
               <li>Cobrament en caixa</li>
             </ul>
           </div>
+
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
             <h4 style="text-align:left;"><a href="https://www.casadellibro.com/nosotros/tienda/carrer-cremat-15/36"
                 style="color:#12d640">Casa del llibre</a><br> </h4>
@@ -354,6 +391,7 @@
               <li>Atenció al client</li>
             </ul>
           </div>
+
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
             <h4 style="text-align:left;"><a href="https://codelearn.cat/terrassa/" target="_blank"
                 style="color:#12d640">Codelearn</a><br> </h4>
@@ -361,11 +399,12 @@
             <p style="text-align:left;color:#fff"><em>Professor d'informàtica, Terrassa, Espanya </em></p>
             <ul style="text-align:left;">
               <li>Professor a càrrec d'un grup de 3 a 15 alumnes amb edats entre 6 i 17 anys.</li>
-              <li>Professor de Roblox Coding.</li>
+              <li>Professor de Roblox Studio.</li>
               <li>Professor de Unity.</li>
-              <li>Professor de RPGMaker.</li>
+              <li>Professor de RPG Maker.</li>
             </ul>
           </div>
+
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
             <h4 style="text-align:left;"><a href="https://www.casadellibro.com/nosotros/tienda/carrer-cremat-15/36"
                 style="color:#12d640">Casa del llibre</a><br> </h4>
@@ -376,6 +415,7 @@
               <li>Atenció al client</li>
             </ul>
           </div>
+
         </div>
       </div>
     </div>
@@ -544,7 +584,6 @@
               <a href="https://www.oracle.com/database/technologies/appdev/jdbc.html" target="_blank">
                 <img src="assets\img\knowledge\jdbc.png" alt="JDBC" height="100" width="100">
               </a>
-
               <a href="https://firebase.google.com/" target="_blank">
                 <img src="assets\img\knowledge\firebaseLogo.svg" alt="Firebase" height="150" width="150">
             </p>
@@ -578,10 +617,23 @@
               <a href="https://developer.android.com/studio" target="_blank"><img
                   src="https://img.icons8.com/color/48/000000/android-studio--v3.png" alt="Android Studio" height="60"
                   width="60"></a>
-
               <a href="https://www.jetbrains.com/es-es/idea/" target="_blank">
                 <img src="https://img.icons8.com/color/48/000000/intellij-idea.png" alt="IntelliJ IDEA" height="60"
                   width="60">
+              </a>
+            </p>
+          </div>
+
+          <!--Control de versions-->
+          <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100" style="background:#fff">
+            <h4 style="text-align:left;color:#09203a">Control de Versions</h4>
+            <p style="text-align:left;">
+              <a href="https://github.com/" target="_blank"><img
+                  src="assets\img\knowledge\GitHubLogo.png"
+                  alt="GitHub" height="80" width="170"></a>
+              <a href="https://about.gitlab.com/" target="_blank"><img
+                  src="assets\img\knowledge\gitlab-logo.svg" alt="GitLab" height="90"
+                  width="220"></a>
               </a>
             </p>
           </div>
@@ -670,7 +722,7 @@
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing', {
-      strings: ["Futur programador", "Tècnic en Sistemes Microinformàtics i Xarxes", "Entusiasta de les xarxes"],
+      strings: ["Tècnic Superior en Desenvolupament d'Aplicacions Multiplataforma", "Tècnic en Sistemes Microinformàtics i Xarxes", "Entusiasta de les xarxes"],
       loop: true,
       typeSpeed: 65,
       backSpeed: 65
