--- a/en.html
+++ b/en.html
@@ -73,7 +73,7 @@
       <nav class="nav-menu d-none d-lg-block">
         <ul>
           <li class="active"><a href="#header"> <span>Home</span></a></li>
-          <li><a href="#about"><span>About</span></a></li>
+          <li><a href="#about"><span>About Me</span></a></li>
           <li><a href="#education"> <span>Education</span></a></li>
           <li><a href="#experience"> <span>Experience</span></a></li>
           <li><a href="#projects"> <span>Projects</span></a></li>
@@ -104,7 +104,7 @@
     <div class="about-me container">
 
       <div class="section-title">
-        <h2>About</h2>
+        <h2>About Me</h2>
       </div>
 
       <div class="row">
@@ -112,15 +112,15 @@
           <img src="assets/img/me.jpg" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <p>
-            Student of a Higher Professional Training Degree in Cross-platform Application Development and Microcomputer
-            Systems and Network Technician who seeks to continue training in the world of programming.<br>
-            In the future I would like to study the higher degrees:
-            <i>Web Application Development</i> and <i>Administration of Networked Computer Systems.</i>.
+          <p>Student of a Higher Professional Training Degree in Web Application Development.<br>
+            Senior Technician in Cross-platform Application Development and Technician in microcomputer systems and networks.
+            <!--In the future I would like to study the higher degree: <i>Administration of Networked Computer Systems.</i>. -->
           </p>
           <p>
-            I am a responsible, educated and hardworking person who seeks to try to gain experience in order
-            to continue acquiring knowledgee, training as a future computer technician and programmer.
+            I am a proactive, hard-working person and lover of the computer world. <br>
+            I want to contribute and develop my knowledge, experience, and motivation in the next project in which I am part.
+            <!-- I am a responsible, educated and hardworking person who seeks to try to gain experience in order
+            to continue acquiring knowledge, training as a future computer technician and programmer.-->
           </p>
           <div class="row">
             <div class="col-lg-6">
@@ -149,19 +149,25 @@
       </div>
 
       <div class="row">
-        <div class="col-lg-3 col-md-4">
+        <div class="col-lg-3 col-md-4 mt-4 mt-lg-0">
           <div class="icon-box">
-            <i class="ri-global-line" style="color: #ffbb2c;"></i>
-            <h3>Software Development</h3>
+            <i class="ri-android-fill" style="color: #a4c639;"></i>
+            <h3>Android Application Development</h3>
           </div>
         </div>
-        <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
+        <div class="col-lg-3 col-md-4 mt-4 mt-lg-0">
+          <div class="icon-box">
+            <i class="ri-global-line" style="color: #ffbb2c;"></i>
+            <h3>Web  Development</h3>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4 mt-4 mt-lg-0">
           <div class="icon-box">
             <i class="ri-database-2-line" style="color: #5578ff;"></i>
             <h3>Database</h3>
           </div>
         </div>
-        <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
+        <div class="col-lg-3 col-md-4 mt-4 mt-lg-0">
           <div class="icon-box">
             <i class="ri-ubuntu-fill" style="color: #DD4814;"></i>
             <h3>Ubuntu</h3>
@@ -189,16 +195,16 @@
       <div class="row">
         <div class="col-lg-12" data-aos="fade-up" style="display: inline-block;">
 
-
+          <!-- Web Application Development -->
           <div class="col-md-4 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100"
             style="padding:0px 0px;padding-bottom: 5px;display: inline-block;">
             <img src="assets/img/education/inscopernic.png" class="img-fluid" alt="">
-            <h4 style="text-align:left;"><a href="https://copernic.cat/" target="_blank" style="color:#fff">Nicolau
-                Copernic Institute</a><br> </h4>
+            <h4 style="text-align:left;margin-left: 3px;"><a href="https://copernic.cat/" target="_blank" style="color:#fff">Nicolau
+                Copèrnic Institute</a><br> </h4>
             <p style="text-align:left;color:#fff;padding: 5px 10px;"><em>Higher Professional Training Degree</em></p>
-            <h5 style="text-align:left;padding: 0px 10px;">September 2020 - June 2022</h5>
-            <h6 style="text-align:left;color:#fff;padding: 0px 10px;">Cross-platform Application Development</h6>
-            <ul style="text-align:left;color:#fff;">
+            <h5 style="text-align:left;padding: 0px 10px;">September 2022 - June 2023</h5>
+            <h6 style="text-align:left;color:#fff;padding: 0px 10px;">Web Application Development</h6>
+            <!--<ul style="text-align:left;color:#fff;">
               <li>Computer Systems</li>
               <li>Databases [MySQL and MongoDB]</li>
               <li>Java Programming</li>
@@ -213,18 +219,47 @@
               <li>Training and Career Guidance</li>
               <li>Business and Entrepreneurship</li>
               <li>Training in Workplaces</li>
-            </ul>
+            </ul>-->
           </div>
+
+          <!-- Cross-platform Application Development -->
           <div class="col-md-4 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100"
             style="padding:0px 0px;padding-bottom: 5px;display: inline-block;">
             <img src="assets/img/education/inscopernic.png" class="img-fluid" alt="">
-            <h4 style="text-align:left;"><a href="https://copernic.cat/" target="_blank" style="color:#fff">Nicolau
-                Copernic Institute</a><br> </h4>
+            <h4 style="text-align:left;margin-left: 3px;"><a href="https://copernic.cat/" target="_blank" style="color:#fff">Nicolau
+                Copèrnic Institute</a><br> </h4>
+            <p style="text-align:left;color:#fff;padding: 5px 10px;"><em>Higher Professional Training Degree</em></p>
+            <h5 style="text-align:left;padding: 0px 10px;">September 2020 - June 2022</h5>
+            <h6 style="text-align:left;color:#fff;padding: 0px 10px;">Cross-platform Application Development</h6>
+            <!--<ul style="text-align:left;color:#fff;">
+              <li>Computer Systems</li>
+              <li>Databases [MySQL and MongoDB]</li>
+              <li>Java Programming</li>
+              <li>Brand Languages and Information Management Systems</li>
+              <li>Development Environments</li>
+              <li>Access to Data</li>
+              <li>Development of Interfaces</li>
+              <li>Multimedia Programming and Mobile Devices</li>
+              <li>Programming Services and Process</li>
+              <li>Business Management Systems</li>
+              <li>Cross-platform application development project</li>
+              <li>Training and Career Guidance</li>
+              <li>Business and Entrepreneurship</li>
+              <li>Training in Workplaces</li>
+            </ul>-->
+          </div>
+
+          <!-- Microcomputer Systems and Networks -->
+          <div class="col-md-4 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100"
+            style="padding:0px 0px;padding-bottom: 5px;display: inline-block;">
+            <img src="assets/img/education/inscopernic.png" class="img-fluid" alt="">
+            <h4 style="text-align:left;margin-left: 3px;"><a href="https://copernic.cat/" target="_blank" style="color:#fff">Nicolau
+                Copèrnic Institute</a><br> </h4>
             <p style="text-align:left;color:#fff;padding: 5px 10px;"><em>Intermediate Professional Training Degree</em>
             </p>
             <h5 style="text-align:left;padding: 0px 10px;">September 2018 - June 2020</h5>
             <h6 style="text-align:left;color:#fff;padding: 0px 10px;">Microcomputer Systems and Networks</h6>
-            <ul style="text-align:left;color:#fff;">
+            <!--<ul style="text-align:left;color:#fff;">
               <li>Assembly and Maintenance of Equipment</li>
               <li>Single-Place Operating Systems</li>
               <li>Office Applications</li>
@@ -238,7 +273,7 @@
               <li>Training and Career Guidance</li>
               <li>Business and Entrepreneurship</li>
               <li>Training in Workplaces</li>
-            </ul>
+            </ul>-->
           </div>
         </div>
       </div>
@@ -358,9 +393,9 @@
             <p style="text-align:left;color:#fff"><em>Computer science teacher, Terrassa, Spain </em></p>
             <ul style="text-align:left;">
               <li>Teacher in charge of a group of 3 to 15 students aged between 6 and 17 years.</li>
-              <li>Roblox coding teacher.</li>
+              <li>Roblox Studio teacher.</li>
               <li>Unity teacher.</li>
-              <li>RPGMaker teacher.</li>
+              <li>RPG Maker teacher.</li>
             </ul>
           </div>
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
@@ -582,6 +617,20 @@
               </a>
             </p>
           </div>
+
+          <!--Version control system-->
+          <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100" style="background:#fff">
+            <h4 style="text-align:left;color:#09203a">Version Control System</h4>
+            <p style="text-align:left;">
+              <a href="https://github.com/" target="_blank"><img
+                  src="assets\img\knowledge\GitHubLogo.png"
+                  alt="GitHub" height="80" width="170"></a>
+              <a href="https://about.gitlab.com/" target="_blank"><img
+                  src="assets\img\knowledge\gitlab-logo.svg" alt="GitLab" height="90"
+                  width="220"></a>
+              </a>
+            </p>
+          </div>
           
           <!--Others-->
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100" style="background:#fff">
@@ -666,7 +715,7 @@
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing', {
-      strings: ["Future programmer", "Microcomputer Systems and Network Technician", "Networks Enthusiast"],
+      strings: ["Senior Technician in Cross-platform Application Development", "Microcomputer Systems and Network Technician", "Networks Enthusiast"],
       loop: true,
       typeSpeed: 65,
       backSpeed: 65
