--- a/index.html
+++ b/index.html
@@ -112,26 +112,28 @@
           <img src="assets/img/me.jpg" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <p>Estudiante de ciclo formativo grado superior en Desarrollo de Aplicaciones Multiplataforma y técnico en
-            Sistemas Microinformáticos y Redes que busca seguir formándose en el mundo de la programación. <br>
-            En un futuro me gustaría estudiar los grados superiores: <i>Desarrollo de Aplicaciones Web</i> y
-            <i>Administración de Sistemas Informáticos en Red</i>.
+          <p>Estudiante de ciclo formativo grado superior en Desarrollo de Aplicaciones Web.<br>
+            Técnico Superior en Desarrollo de Aplicaciones Multiplataforma y técnico en
+            Sistemas Microinformáticos y Redes<br>
+            <!--En un futuro me gustaría estudiar el grado superior: <i>Administración de Sistemas Informáticos en Red</i>. -->
           </p>
           <p>
-            Soy una persona responsable, educada y trabajadora que lo que busca es intentar ganar experiencia para poder
-            seguir adquiriendo conocimientos, formándose como futuro técnico informático y programador.
+            Soy una persona proactiva, trabajadora y amante del mundo de la informática.<br>
+            Tengo ganas de aportar y desarrollar mis conocimientos, experiencia y motivación en el próximo proyecto en el que forme parte.
+            <!-- Soy una persona responsable, educada y trabajadora que lo que busca es intentar ganar experiencia para poder
+            seguir adquiriendo conocimientos, formándose como futuro técnico informático y programador.-->
           </p>
           <div class="row">
             <div class="col-lg-6">
               <ul>
                 <li><i class="icofont-rounded-right"></i> <strong>Fecha de nacimiento:</strong> 28 Marzo 2002</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Ciudad:</strong> Terrassa, España</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Ciudad:</strong> Terrassa, Barcelona, España</li>
               </ul>
             </div>
             <div class="col-lg-6">
               <ul>
-                <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> jaumecadafalchmiro@gmail.com</li>
-                <!--<li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +91 81288 73796</li>-->
+                <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> jaumecadafalchmiro@gmail.com</li> 
+                <!--<li><i class="icofont-rounded-right"></i> <strong>Tel:</strong> +34 622 711 047</li>-->
               </ul>
             </div>
           </div>
@@ -148,10 +150,16 @@
       </div>
 
       <div class="row">
-        <div class="col-lg-3 col-md-4">
+        <div class="col-lg-3 col-md-4 mt-4 mt-lg-0">
+          <div class="icon-box">
+            <i class="ri-android-fill" style="color: #a4c639;"></i>
+            <h3>Desarrollo de Aplicaciones Android</h3>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4 mt-4 mt-lg-0">
           <div class="icon-box">
             <i class="ri-global-line" style="color: #ffbb2c;"></i>
-            <h3>Desarrollo de Software</h3>
+            <h3>Desarrollo Web</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
@@ -161,7 +169,7 @@
           </div>
         </div>
 
-        <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
+        <div class="col-lg-3 col-md-4 mt-4 mt-lg-0">
           <div class="icon-box">
             <i class="ri-ubuntu-fill" style="color: #DD4814;"></i>
             <h3>Ubuntu</h3>
@@ -190,16 +198,16 @@
       <div class="row">
         <div class="col-lg-12" data-aos="fade-up" style="display: inline-block;">
 
-
+          <!-- Desarrollo de Aplicaciones Web -->
           <div class="col-md-4 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100"
-            style="padding:0px 0px;padding-bottom: 5px;display: inline-block;">
+            style="padding:0px 0px;margin-bottom: 25px;display: inline-block;">
             <img src="assets/img/education/inscopernic.png" class="img-fluid" alt="">
-            <h4 style="text-align:left;"><a href="https://copernic.cat/" target="_blank" style="color:#fff">Instituto
-                Nicolau Copernic</a><br> </h4>
+            <h4 style="text-align:left;margin-left: 3px;"><a href="https://copernic.cat/" target="_blank" style="color:#fff">Instituto
+                Nicolau Copèrnic</a><br> </h4>
             <p style="text-align:left;color:#fff;padding: 5px 10px;"><em>Ciclo Formativo Grado Superior</em></p>
-            <h5 style="text-align:left;padding: 0px 10px;">Setiembre 2020 - Junio 2022</h5>
-            <h6 style="text-align:left;color:#fff;padding: 0px 10px;">Desarrollo de Aplicaciones Multiplataforma</h6>
-            <ul style="text-align:left;color:#fff;">
+            <h5 style="text-align:left;padding: 0px 10px;">Setiembre 2022 - Junio 2023</h5>
+            <h6 style="text-align:left;color:#fff;padding: 0px 10px;">Desarrollo de Aplicaciones Web</h6>
+           <!-- <ul style="text-align:left;color:#fff;">
               <li>Sistemas informáticos</li>
               <li>Bases de Datos [MySQL y MongoDB]</li>
               <li>Programación en Java</li>
@@ -214,17 +222,46 @@
               <li>Formación y orientación laboral</li>
               <li>Empresa e iniciativa emprendedora</li>
               <li>Formación en centros de trabajo</li>
-            </ul>
+            </ul>-->
           </div>
+
+          <!-- Desarrollo de Aplicaciones Multiplataforma -->
+          <div class="col-md-4 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100"
+            style="padding:0px 0px;margin-bottom: 25px;display: inline-block;">
+            <img src="assets/img/education/inscopernic.png" class="img-fluid" alt="">
+            <h4 style="text-align:left;margin-left: 3px;"><a href="https://copernic.cat/" target="_blank" style="color:#fff">Instituto
+                Nicolau Copèrnic</a><br> </h4>
+            <p style="text-align:left;color:#fff;padding: 5px 10px;"><em>Ciclo Formativo Grado Superior</em></p>
+            <h5 style="text-align:left;padding: 0px 10px;">Setiembre 2020 - Junio 2022</h5>
+            <h6 style="text-align:left;color:#fff;padding: 0px 10px;">Desarrollo de Aplicaciones Multiplataforma</h6>
+           <!-- <ul style="text-align:left;color:#fff;">
+              <li>Sistemas informáticos</li>
+              <li>Bases de Datos [MySQL y MongoDB]</li>
+              <li>Programación en Java</li>
+              <li>Lenguajes de marcas y sistemas de gestión de información</li>
+              <li>Entornos de desarrollo</li>
+              <li>Acceso a datos</li>
+              <li>Desarrollo de interfaces</li>
+              <li>Programación multimedia y dispositivos móviles</li>
+              <li>Programación de servicios y procesos</li>
+              <li>Sistemas de gestión empresarial</li>
+              <li>Proyecto de desarrollo de aplicaciones multiplataforma</li>
+              <li>Formación y orientación laboral</li>
+              <li>Empresa e iniciativa emprendedora</li>
+              <li>Formación en centros de trabajo</li>
+            </ul>-->
+          </div>
+
+          <!-- Sistemas Microinformáticos y Redes -->
           <div class="col-md-4 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100"
             style="padding:0px 0px;padding-bottom: 5px;display: inline-block;">
             <img src="assets/img/education/inscopernic.png" class="img-fluid" alt="">
-            <h4 style="text-align:left;"><a href="https://copernic.cat/" target="_blank" style="color:#fff">Instituto
-                Nicolau Copernic</a><br> </h4>
+            <h4 style="text-align:left;margin-left: 3px;"><a href="https://copernic.cat/" target="_blank" style="color:#fff">Instituto
+                Nicolau Copèrnic</a><br> </h4>
             <p style="text-align:left;color:#fff;padding: 5px 10px;"><em>Ciclo Formativo Grado Medio</em></p>
             <h5 style="text-align:left;padding: 0px 10px;">Setiembre 2018 - Junio 2020</h5>
             <h6 style="text-align:left;color:#fff;padding: 0px 10px;">Sistemas Microinformáticos y Redes</h6>
-            <ul style="text-align:left;color:#fff;">
+            <!--<ul style="text-align:left;color:#fff;">
               <li>Montaje y mantenimiento de equipo</li>
               <li>Sistemas operativos monopuesto</li>
               <li>Aplicaciones ofimáticas</li>
@@ -238,7 +275,7 @@
               <li>Formación y orientación laboral</li>
               <li>Empresa e iniciativa empresarial</li>
               <li>Formación en centros de trabajo</li>
-            </ul>
+            </ul>-->
           </div>
         </div>
       </div>
@@ -361,9 +398,9 @@
             <p style="text-align:left;color:#fff"><em>Profesor de informática, Terrassa, España </em></p>
             <ul style="text-align:left;">
               <li>Profesor a cargo de un grupo de 3 a 15 alumnos con edades entre 6 y 17 años.</li>
-              <li>Profesor de Roblox Coding.</li>
+              <li>Profesor de Roblox Studio.</li>
               <li>Profesor de Unity.</li>
-              <li>Profesor de RPGMaker.</li>
+              <li>Profesor de RPG Maker.</li>
             </ul>
           </div>
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
@@ -590,6 +627,20 @@
             </p>
           </div>
           
+          <!--Control de versiones-->
+          <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100" style="background:#fff">
+            <h4 style="text-align:left;color:#09203a">Control de Versiones</h4>
+            <p style="text-align:left;">
+              <a href="https://github.com/" target="_blank"><img
+                  src="assets\img\knowledge\GitHubLogo.png"
+                  alt="GitHub" height="80" width="170"></a>
+              <a href="https://about.gitlab.com/" target="_blank"><img
+                  src="assets\img\knowledge\gitlab-logo.svg" alt="GitLab" height="90"
+                  width="220"></a>
+              </a>
+            </p>
+          </div>
+
           <!--Otros-->
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100" style="background:#fff">
             <h4 style="text-align:left;color:#09203a">Otros</h4>
@@ -675,7 +726,7 @@
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing', {
-      strings: ["Futuro programador", "Técnico en Sistemas Microinformáticos y Redes", "Entusiasta de las redes"],
+      strings: ["Técnico Superior en Desarrollo de Aplicaciones Multiplataforma", "Técnico en Sistemas Microinformáticos y Redes", "Entusiasta de las redes"],
       loop: true,
       typeSpeed: 65,
       backSpeed: 65
