--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <div class="col-lg-6">
               <ul>
                 <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> jaumecadafalchmiro@gmail.com</li> 
-                <!--<li><i class="icofont-rounded-right"></i> <strong>Tel:</strong> +34 622 711 047</li>-->
+                <!--<li><i class="icofont-rounded-right"></i> <strong>Tel:</strong> +34 622 71 1 047</li>-->
               </ul>
             </div>
           </div>
