--- a/en.html
+++ b/en.html
@@ -125,14 +125,14 @@
           <div class="row">
             <div class="col-lg-6">
               <ul>
-                <li><i class="icofont-rounded-right"></i> <strong>Birthday</strong> 28 March 2002</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 28 March 2002</li>
                 <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Terrassa, Spain</li>
               </ul>
             </div>
             <div class="col-lg-6">
               <ul>
                 <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> jaumecadafalchmiro@gmail.com</li>
-                <!--<li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +91 81288 73796</li>-->
+                <!--<li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +34 622 71 10 47</li>-->
               </ul>
             </div>
           </div>
