--- a/projects/Penjat_es.html
+++ b/projects/Penjat_es.html
@@ -56,7 +56,7 @@
                             Esta aplicación fue desarrollada en el periodo de la Formación en Centros de Trabajo a Happy Customer Box.                        
                         </p>
                         <p>
-                            La aplicación trata del juego clásico del colgado, con más de 100 palabras permite que tengas palabras por varios ratos de juego.
+                            La aplicación trata del juego clásico del ahorcado, con más de 100 palabras permite que tengas palabras por varios ratos de juego.
                             Incluye ranking con sistema de puntos, ideal para los usuarios más competitivos.<br/>
                             <b>Tecnologías:</b><br>
                             <ul>
