--- a/en.html
+++ b/en.html
@@ -279,6 +279,34 @@
       </div>
     </div>
 
+    <!--Certificates-->
+    <div class="portfolio">
+      <div class="container">
+        <div class="section-title">
+          <h2>Certificates</h2>
+        </div>
+        <div class="row portfolio-container" style="position: relative; height: 437.75px">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app" style="position: absolute; left: 0px; top: 0px">
+            <center>
+              <h4>Oxford Test of English</h4>
+            </center>
+            <div class="portfolio-wrap">
+              <img src="assets/img/education/OxfordLogo.jpg" class="img-fluid" style="align-items: center;" alt=""
+                width="250" />
+              <div class="portfolio-info">
+                <div class="portfolio-links">
+                  <a href="training/OxfordTestOfEnglishCertificate.html" data-gall="portfolioDetailsGallery"
+                    data-vbtype="iframe" class="venobox" title="Detalles de la formación"><i
+                      class="bx bx-info-circle"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+    <!--End Certificates-->
 
     <div class="portfolio">
       <div class="container">
@@ -342,16 +370,14 @@
                 <div class="portfolio-links">
                   <a href="training/WorkCenterTraining.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
                     class="venobox" title="Training details"><i class="bx bx-info-circle"></i></a>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-    </div>
-    </div>
-  </section>
+    </section>
   <!-- End Education Section -->
 
 
