added new information

--- a/ca.html
+++ b/ca.html
@@ -291,7 +291,7 @@
               <h4>Oxford Test of English</h4>
             </center>
             <div class="portfolio-wrap">
-              <img src="assets/img/education/OxfordLogo.jpg" class="img-fluid" style="align-items: center;" alt=""
+              <img src="assets/img/education/OxfordLogo.jpg" class="img-fluid" style="display: block; margin-left: auto; margin-right: auto;" style="align-items: center;" alt=""
                 width="250" />
               <div class="portfolio-info">
                 <div class="portfolio-links">
@@ -313,16 +313,48 @@
           <h2>Formació</h2>
         </div>
         <div class="row portfolio-container" style="position: relative; height: 437.75px;">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app" style="position: absolute; left: 0px; top: 0px;">
+            <center>
+              <h4>Formació Professional Dual [FPD]</h4>
+            </center>
+            <div class="portfolio-wrap">
+              <img src="assets/img/education/logoEnttia.png" class="img-fluid" style="display: block; margin-left: auto; margin-right: auto;" alt="" width="250">
+              <div class="portfolio-info">
+
+                <div class="portfolio-links">
+                  <a href="training/FPDEmttia_ca.html" data-gall="portfolioDetailsGallery"
+                    data-vbtype="iframe" class="venobox" title="Detalls de la formació"><i
+                      class="bx bx-info-circle"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app" style="position: absolute; left: 0px; top: 0px;">
+            <center>
+              <h4>Formació en Centre de Treball [FCT]</h4>
+            </center>
+            <div class="portfolio-wrap">
+              <img src="assets/img/education/logoEnttia.png" class="img-fluid" style="display: block; margin-left: auto; margin-right: auto;" alt="" width="250">
+              <div class="portfolio-info">
+
+                <div class="portfolio-links">
+                  <a href="training/FCTEnttia_ca.html" data-gall="portfolioDetailsGallery"
+                    data-vbtype="iframe" class="venobox" title="Detalls de la formació"><i
+                      class="bx bx-info-circle"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-app" style="position: absolute; left: 370px; top: 0px;">
             <center>
               <h4>Formació en Centre de Treball [FCT]</h4>
             </center>
             <div class="portfolio-wrap">
-              <img src="assets/img/education/happyCustomerBox.png" class="img-fluid" alt="" width="250">
+              <img src="assets/img/education/happyCustomerBox.png" class="img-fluid" style="display: block; margin-left: auto; margin-right: auto;" alt="" width="250">
               <div class="portfolio-info">
 
                 <div class="portfolio-links">
-                  <a href="training/FormacioCentreTreball1.html" data-gall="portfolioDetailsGallery"
+                  <a href="training/FCTHappyCustomerBox_ca.html" data-gall="portfolioDetailsGallery"
                     data-vbtype="iframe" class="venobox" title="Detalls de la formació"><i
                       class="bx bx-info-circle"></i></a>
                 </div>
@@ -369,7 +401,7 @@
               <div class="portfolio-info">
 
                 <div class="portfolio-links">
-                  <a href="training/FormacioCentreTreball.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
+                  <a href="training/FCTCodelearn_ca.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
                     class="venobox" title="Detalls de la formació"><i class="bx bx-info-circle"></i></a>
                   </div>
                 </div>
@@ -546,11 +578,14 @@
               <a href="https://kotlinlang.org/" target="_blank"><img
                   src="https://www.vectorlogo.zone/logos/kotlinlang/kotlinlang-ar21.svg" alt="Kotlin" height="90"
                   width="120"></a>
-              <!--<a href="https://www.php.net/"><img src="https://www.vectorlogo.zone/logos/php/php-ar21.svg"
-                  alt="vectorlogo.zone" height="50" width="190"></a>
-              <a href="https://www.javascript.com/"><img
-                  src="https://www.vectorlogo.zone/logos/javascript/javascript-ar21.svg" alt="vectorlogo.zone"
-                  height="70" width="120"></a>-->
+              <a href="https://www.php.net/" target="_blank"><img src="https://www.vectorlogo.zone/logos/php/php-ar21.svg"
+                  alt="PHP Logo" height="50" width="190"></a>
+              <a href="https://www.javascript.com/" target="_blank"><img
+                  src="https://upload.wikimedia.org/wikipedia/commons/9/99/Unofficial_JavaScript_logo_2.svg" alt="JavaScript Logo"
+                  height="70" width="120"></a>
+              <a href="https://learn.microsoft.com/es-es/dotnet/csharp/" target="_blank"><img 
+                src="https://upload.wikimedia.org/wikipedia/commons/4/4f/Csharp_Logo.png" alt="C# logo" height="100"
+                width="100"></a>
             </p>
           </div>
           <!--Llenguatges de Marques-->
@@ -577,6 +612,8 @@
               <a href="https://spring.io/projects/spring-boot" target="_blank">
                 <img src="assets\img\knowledge\spring-boot-logo.png" alt="Spring Boot" height="60" width="100">
               </a>
+              <a href="https://dotnet.microsoft.com/es-es/" target="_blank"><img 
+                src="https://upload.wikimedia.org/wikipedia/commons/e/ee/.NET_Core_Logo.svg" alt=".NET Core Logo" height="80" width="80"></a>
             </p>
           </div>
 
@@ -588,6 +625,8 @@
                   alt="Mysql" height="70" width="130"></a>
               <a href="https://www.mongodb.com/" target="_blank"><img src="https://www.vectorlogo.zone/logos/mongodb/mongodb-ar21.svg"
                   alt="MongoDB" height="70" width="130"></a>
+              <a href="https://www.microsoft.com/es-es/sql-server/sql-server-downloads/" target="_blank"> <img 
+                src="https://seeklogo.com/images/M/microsoft-sql-server-logo-96AF49E2B3-seeklogo.com.png" alt="SQL Server Logo" height="100" width="100"></a>
             </p>
           </div>
 
@@ -645,6 +684,8 @@
                 <img src="https://img.icons8.com/color/48/000000/intellij-idea.png" alt="IntelliJ IDEA" height="60"
                   width="60">
               </a>
+              <a href="https://visualstudio.microsoft.com/es/" target="_blank"> <img 
+                src="https://upload.wikimedia.org/wikipedia/commons/5/59/Visual_Studio_Icon_2019.svg" height="60" width="60"></a>
             </p>
           </div>
 
