--- a/en.html
+++ b/en.html
@@ -291,7 +291,7 @@
               <h4>Oxford Test of English</h4>
             </center>
             <div class="portfolio-wrap">
-              <img src="assets/img/education/OxfordLogo.jpg" class="img-fluid" style="align-items: center;" alt=""
+              <img src="assets/img/education/OxfordLogo.jpg" class="img-fluid" style="display: block; margin-left: auto; margin-right: auto;" style="align-items: center;" alt=""
                 width="250" />
               <div class="portfolio-info">
                 <div class="portfolio-links">
@@ -316,14 +316,46 @@
         <div class="row portfolio-container" style="position: relative; height: 437.75px;">
           <div class="col-lg-4 col-md-6 portfolio-item filter-app" style="position: absolute; left: 0px; top: 0px;">
             <center>
-              <h4>Work Center Training [WCT]</h4>
+              <h4>Dual Vocational Training [DVT]</h4>
             </center>
             <div class="portfolio-wrap">
-              <img src="assets/img/education/happyCustomerBox.png" class="img-fluid" alt="" width="250">
+              <img src="assets/img/education/logoEnttia.png" class="img-fluid" style="display: block; margin-left: auto; margin-right: auto;" alt="" width="250">
               <div class="portfolio-info">
 
                 <div class="portfolio-links">
-                  <a href="training/WorkCenterTraining1.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
+                  <a href="training/FPDEmttia_en.html" data-gall="portfolioDetailsGallery"
+                    data-vbtype="iframe" class="venobox" title="Training details"><i
+                      class="bx bx-info-circle"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app" style="position: absolute; left: 0px; top: 0px;">
+            <center>
+              <h4>Work Center Training [WCT]</h4>
+            </center>
+            <div class="portfolio-wrap">
+              <img src="assets/img/education/logoEnttia.png" class="img-fluid" style="display: block; margin-left: auto; margin-right: auto;" alt="" width="250">
+              <div class="portfolio-info">
+
+                <div class="portfolio-links">
+                  <a href="training/FCTEnttia_en.html" data-gall="portfolioDetailsGallery"
+                    data-vbtype="iframe" class="venobox" title="Training details"><i
+                      class="bx bx-info-circle"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app" style="position: absolute; left: 0px; top: 0px;">
+            <center>
+              <h4>Work Center Training [WCT]</h4>
+            </center>
+            <div class="portfolio-wrap">
+              <img src="assets/img/education/happyCustomerBox.png" class="img-fluid" style="display: block; margin-left: auto; margin-right: auto;" alt="" width="250">
+              <div class="portfolio-info">
+
+                <div class="portfolio-links">
+                  <a href="training/FCTHappyCustomerBox_en.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
                     class="venobox" title="Training details"><i class="bx bx-info-circle"></i></a>
                 </div>
               </div>
@@ -368,7 +400,7 @@
               <div class="portfolio-info">
 
                 <div class="portfolio-links">
-                  <a href="training/WorkCenterTraining.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
+                  <a href="training/FCTCodelearn_en.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
                     class="venobox" title="Training details"><i class="bx bx-info-circle"></i></a>
                   </div>
                 </div>
@@ -540,11 +572,14 @@
               <a href="https://kotlinlang.org/" target="_blank"><img
                   src="https://www.vectorlogo.zone/logos/kotlinlang/kotlinlang-ar21.svg" alt="Kotlin" height="90"
                   width="120"></a>
-              <!--<a href="https://www.php.net/"><img src="https://www.vectorlogo.zone/logos/php/php-ar21.svg"
-                  alt="vectorlogo.zone" height="50" width="190"></a>
-              <a href="https://www.javascript.com/"><img
-                  src="https://www.vectorlogo.zone/logos/javascript/javascript-ar21.svg" alt="vectorlogo.zone"
-                  height="70" width="120"></a>-->
+              <a href="https://www.php.net/" target="_blank"><img src="https://www.vectorlogo.zone/logos/php/php-ar21.svg"
+                  alt="PHP Logo" height="50" width="190"></a>
+              <a href="https://www.javascript.com/" target="_blank"><img
+                  src="https://upload.wikimedia.org/wikipedia/commons/9/99/Unofficial_JavaScript_logo_2.svg" alt="JavaScript Logo"
+                  height="70" width="120"></a>
+              <a href="https://learn.microsoft.com/es-es/dotnet/csharp/" target="_blank"><img 
+                src="https://upload.wikimedia.org/wikipedia/commons/4/4f/Csharp_Logo.png" alt="C# logo" height="100"
+                width="100"></a>
             </p>
           </div>
           <!-- Markup Languages-->
@@ -571,6 +606,8 @@
               <a href="https://spring.io/projects/spring-boot" target="_blank">
                 <img src="assets\img\knowledge\spring-boot-logo.png" alt="Spring Boot" height="60" width="100">
               </a>
+              <a href="https://dotnet.microsoft.com/es-es/" target="_blank"><img 
+                src="https://upload.wikimedia.org/wikipedia/commons/e/ee/.NET_Core_Logo.svg" alt=".NET Core Logo" height="80" width="80"></a>
             </p>
           </div>
 
@@ -582,6 +619,8 @@
                   alt="Mysql" height="70" width="130"></a>
               <a href="https://www.mongodb.com/" target="_blank"><img src="https://www.vectorlogo.zone/logos/mongodb/mongodb-ar21.svg"
                   alt="MongoDB" height="70" width="130"></a>
+              <a href="https://www.microsoft.com/es-es/sql-server/sql-server-downloads/" target="_blank"> <img 
+                src="https://seeklogo.com/images/M/microsoft-sql-server-logo-96AF49E2B3-seeklogo.com.png" alt="SQL Server Logo" height="100" width="100"></a>
             </p>
           </div>
 
@@ -602,7 +641,6 @@
               <a href="https://www.oracle.com/database/technologies/appdev/jdbc.html" target="_blank">
                 <img src="assets\img\knowledge\jdbc.png" alt="JDBC" height="100" width="100">
               </a>
-
               <a href="https://firebase.google.com/" target="_blank">
                 <img src="assets\img\knowledge\firebaseLogo.svg" alt="Firebase" height="150" width="150">
             </p>
@@ -615,7 +653,7 @@
               <a href="https://code.visualstudio.com/" target="_blank"><img
                   src="https://www.vectorlogo.zone/logos/visualstudio_code/visualstudio_code-ar21.svg"
                   alt="Visual Studio Code" height="70" width="120"></a>
-              <a href="https://brackets.io/"><img src="https://www.vectorlogo.zone/logos/bracketsio/bracketsio-ar21.svg"
+              <a href="https://brackets.io/" target="_blank"><img src="https://www.vectorlogo.zone/logos/bracketsio/bracketsio-ar21.svg"
                   alt="Brackets" height="90" width="120"></a>
               <a href="https://www.sublimetext.com//" target="_blank"><img
                   src="https://img.icons8.com/fluency/48/000000/sublime-text.png" alt="SublimeText" height="60"
@@ -636,11 +674,12 @@
               <a href="https://developer.android.com/studio" target="_blank"><img
                   src="https://img.icons8.com/color/48/000000/android-studio--v3.png" alt="Android Studio" height="60"
                   width="60"></a>
-
               <a href="https://www.jetbrains.com/es-es/idea/" target="_blank">
                 <img src="https://img.icons8.com/color/48/000000/intellij-idea.png" alt="IntelliJ IDEA" height="60"
                   width="60">
               </a>
+              <a href="https://visualstudio.microsoft.com/es/" target="_blank"> <img 
+                src="https://upload.wikimedia.org/wikipedia/commons/5/59/Visual_Studio_Icon_2019.svg" height="60" width="60"></a>
             </p>
           </div>
 
