--- a/training/FCTCodelearn_ca.html
+++ b/training/FCTCodelearn_ca.html
@@ -1,10 +1,10 @@
-<html lang="en">
+<html lang="ca">
 
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Oxford Test Of English</title>
+    <title>Formació en Centre de Treball - Codelearn</title>
     <meta content="" name="descriptison">
     <meta content="" name="keywords">
 
@@ -42,11 +42,25 @@
     <main id="main">
         <div id="portfolio-details" class="portfolio-details">
             <div class="container">
+
                 <div class="row">
+
                     <div class="col-lg-12 portfolio-info">
                         <br>
-                        <iframe src="https://drive.google.com/file/d/1UvWR0D3ADh4CI5leAKEG6cn-MNIO9NTn/preview" height="500px" width="100%"></iframe>
+                        <h2 style="color:#12d640">Formació en Centre de Treball - Codelearn</h2>
+                        <ul>
+                            <li><strong>Centre</strong>: Codelearn Terrassa</li>
+                            <li><strong>Data</strong>: Octubre 2019 - Març 2020</li>
+                            <li><strong>Lloc Web</strong>: <a href="https://codelearn.cat/terrassa/" target="_blank">Enllaç</a></li>
+                            <li><strong>Hores de formació</strong>: 204h</li>
+                            <li><strong>Memòria</strong>: <a href="https://docs.google.com/document/d/18O77e1CHyFCjKsmhVGj1u2aVvvzzHwG0xYKFMxa1mYk/preview"
+                                    target="_blank">Enllaç</a></li>
+                        </ul>
+                        <iframe src="https://docs.google.com/document/d/18O77e1CHyFCjKsmhVGj1u2aVvvzzHwG0xYKFMxa1mYk/preview" height="500px" width="100%"></iframe>
+                    
                     </div>
+                   
+
                 </div>
             </div><!-- End Portfolio Details -->
     </main><!-- End #main -->
