--- a/training/FCTHappyCustomerBox_es.html
+++ b/training/FCTHappyCustomerBox_es.html
@@ -1,10 +1,10 @@
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Oxford Test Of English</title>
+    <title>Formación en Centro de Trabajo - Happy Customer Box</title>
     <meta content="" name="descriptison">
     <meta content="" name="keywords">
 
@@ -42,13 +42,37 @@
     <main id="main">
         <div id="portfolio-details" class="portfolio-details">
             <div class="container">
+
                 <div class="row">
+
                     <div class="col-lg-12 portfolio-info">
                         <br>
-                        <iframe src="https://drive.google.com/file/d/1UvWR0D3ADh4CI5leAKEG6cn-MNIO9NTn/preview" height="500px" width="100%"></iframe>
+                        <h2 style="color:#12d640">Formación en Centro de Trabajo - Happy Customer Box</h2>
+                        <ul>
+                            <li><strong>Centro</strong>: Happy Customer Box</li>
+                            <li><strong>Fecha</strong>: Octubre 2021 - Marzo  2022</li>
+                            <li><strong>Sitio Web</strong>: <a href="https://www.happycustomerbox.com/es/" target="_blank">Enlace</a></li>
+                        </ul>
+                        <p>
+                            Hapy Customer Box es una start-up tecnológica que ayuda a gestionar la opinión de los clientes.<br>
+                        </p>
+                        <p>
+                            <strong>Tecnologías utilizadas:</strong>
+                            <ul>
+                                <li>Android Studio (Kotlin)</li>
+                                <li>Firebase (Authentication, Firestore Database y Storage)</li>
+                                <li>GitHub como control de versiones</li>
+                                <li>Jira como gestor de proyecto</li>
+                                <li>Slack como herramienta de comunicación con integrantes del equipo.</li>
+                                <li>Metodología Agile</li>
+                            </ul>
+                        </p>
                     </div>
+
                 </div>
-            </div><!-- End Portfolio Details -->
+
+            </div>
+        </div><!-- End Portfolio Details -->
     </main><!-- End #main -->
 
     <!-- Vendor JS Files -->
