--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
               <h4>Oxford Test of English</h4>
             </center>
             <div class="portfolio-wrap">
-              <img src="assets/img/education/OxfordLogo.jpg" class="img-fluid" style="align-items: center;" alt=""
+              <img src="assets/img/education/OxfordLogo.jpg" class="img-fluid" style="display: block; margin-left: auto; margin-right: auto;" style="align-items: center;" alt=""
                 width="250" />
               <div class="portfolio-info">
                 <div class="portfolio-links">
@@ -320,23 +320,55 @@
           <h2>Formación</h2>
         </div>
         <div class="row portfolio-container" style="position: relative; height: 437.75px;">
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app" style="position: absolute; left: 0px; top: 0px;">
+          <div class="col-lg-4 col-md-6 portfolio-item" style="position: absolute; left: 0px; top: 0px;">
             <center>
-              <h4>Formación en Centro de Trabajo [FCT]</h4>
+              <h4>Formación Profesional Dual [FPD]</h4>
             </center>
             <div class="portfolio-wrap">
-              <img src="assets/img/education/happyCustomerBox.png" class="img-fluid" alt="" width="250">
+              <img src="assets/img/education/logoEnttia.png" class="img-fluid" style="display: block; margin-left: auto; margin-right: auto;" alt="" width="250">
               <div class="portfolio-info">
 
                 <div class="portfolio-links">
-                  <a href="training/FormacionCentroTrabajo1.html" data-gall="portfolioDetailsGallery"
+                  <a href="training/FPDEmttia_es.html" data-gall="portfolioDetailsGallery"
                     data-vbtype="iframe" class="venobox" title="Detalles de la formación"><i
                       class="bx bx-info-circle"></i></a>
                 </div>
               </div>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app" style="position: absolute; left: 0px; top: 0px;">
+          <div class="col-lg-4 col-md-6 portfolio-item" style="position: absolute; left: 0px; top: 0px;">
+            <center>
+              <h4>Formación en Centro de Trabajo [FCT]</h4>
+            </center>
+            <div class="portfolio-wrap">
+              <img src="assets/img/education/logoEnttia.png" class="img-fluid" style="display: block; margin-left: auto; margin-right: auto;" alt="" width="250">
+              <div class="portfolio-info">
+
+                <div class="portfolio-links">
+                  <a href="training/FCTEnttia_es.html" data-gall="portfolioDetailsGallery"
+                    data-vbtype="iframe" class="venobox" title="Detalles de la formación"><i
+                      class="bx bx-info-circle"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item" style="position: absolute; left: 370px; top: 0px;">
+            <center>
+              <h4>Formación en Centro de Trabajo [FCT]</h4>
+            </center>
+            <div class="portfolio-wrap">
+              <img src="assets/img/education/happyCustomerBox.png" class="img-fluid" style="display: block; margin-left: auto; margin-right: auto;" alt="" width="250">
+              <div class="portfolio-info">
+
+                <div class="portfolio-links">
+                  <a href="training/FCTHappyCustomerBox_es.html" data-gall="portfolioDetailsGallery"
+                    data-vbtype="iframe" class="venobox" title="Detalles de la formación"><i
+                      class="bx bx-info-circle"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item" style="position: absolute; left: 0px; top: 0px;">
             <center>
               <h4>Primeros Auxilios Básicos</h4>
             </center>
@@ -352,7 +384,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app" style="position: absolute; left: 370px; top: 0px;">
+          <div class="col-lg-4 col-md-6 portfolio-item" style="position: absolute; left: 370px; top: 0px;">
             <center>
               <h4>Formación ciudadana en primeros auxilios y uso de desfibriladores</h4>
             </center>
@@ -367,7 +399,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app" style="position: absolute; left: 0px; top: 0px;">
+          <div class="col-lg-4 col-md-6 portfolio-item" style="position: absolute; left: 0px; top: 0px;">
             <center>
               <h4>Formación en Centro de Trabajo [FCT]</h4>
             </center>
@@ -376,7 +408,7 @@
               <div class="portfolio-info">
 
                 <div class="portfolio-links">
-                  <a href="training/FormacionCentroTrabajo.html" data-gall="portfolioDetailsGallery"
+                  <a href="training/FCTCodelearn_es.html" data-gall="portfolioDetailsGallery"
                     data-vbtype="iframe" class="venobox" title="Detalles de la formación"><i
                       class="bx bx-info-circle"></i></a>
                 </div>
@@ -551,17 +583,19 @@
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100" style="background:#fff">
             <h4 style="text-align:left;color:#09203a">Lenguajes de Programación</h4>
             <p style="text-align:left;">
-              <a href="https://www.java.com/" target="_blank"><img
-                  src="https://www.vectorlogo.zone/logos/java/java-horizontal.svg" alt="Java" height="50"
-                  width="120"></a>
+              <a href="https://www.java.com/" target="_blank"><img src="https://www.vectorlogo.zone/logos/java/java-horizontal.svg"
+                  alt="Java" height="50" width="120"></a>
               <a href="https://kotlinlang.org/" target="_blank"><img
                   src="https://www.vectorlogo.zone/logos/kotlinlang/kotlinlang-ar21.svg" alt="Kotlin" height="90"
                   width="120"></a>
-              <!--<a href="https://www.php.net/"><img src="https://www.vectorlogo.zone/logos/php/php-ar21.svg"
-                  alt="vectorlogo.zone" height="50" width="190"></a>
-              <a href="https://www.javascript.com/"><img
-                  src="https://www.vectorlogo.zone/logos/javascript/javascript-ar21.svg" alt="vectorlogo.zone"
-                  height="70" width="120"></a>-->
+              <a href="https://www.php.net/" target="_blank"><img src="https://www.vectorlogo.zone/logos/php/php-ar21.svg"
+                  alt="PHP Logo" height="50" width="190"></a>
+              <a href="https://www.javascript.com/" target="_blank"><img
+                  src="https://upload.wikimedia.org/wikipedia/commons/9/99/Unofficial_JavaScript_logo_2.svg" alt="JavaScript Logo"
+                  height="70" width="120"></a>
+              <a href="https://learn.microsoft.com/es-es/dotnet/csharp/" target="_blank"><img 
+                src="https://upload.wikimedia.org/wikipedia/commons/4/4f/Csharp_Logo.png" alt="C# logo" height="100"
+                width="100"></a>
             </p>
           </div>
           <!-- Lenguajes de Marcas-->
@@ -573,9 +607,8 @@
               <a href="https://www.w3.org/Style/CSS/" target="_blank"><img
                   src="https://upload.wikimedia.org/wikipedia/commons/d/d5/CSS3_logo_and_wordmark.svg" alt="CSS"
                   height="60" width="90"></a>
-              <a href="https://www.xml.com/" target="_blank"><img
-                  src="https://www.vectorlogo.zone/logos/w3c_xml/w3c_xml-ar21.svg" alt="XML" height="70"
-                  width="130"></a>
+              <a href="https://www.xml.com/" target="_blank"><img src="https://www.vectorlogo.zone/logos/w3c_xml/w3c_xml-ar21.svg"
+                  alt="XML" height="70" width="130"></a>
             </p>
           </div>
 
@@ -589,6 +622,8 @@
               <a href="https://spring.io/projects/spring-boot" target="_blank">
                 <img src="assets\img\knowledge\spring-boot-logo.png" alt="Spring Boot" height="60" width="100">
               </a>
+              <a href="https://dotnet.microsoft.com/es-es/" target="_blank"><img 
+                src="https://upload.wikimedia.org/wikipedia/commons/e/ee/.NET_Core_Logo.svg" alt=".NET Core Logo" height="80" width="80"></a>
             </p>
           </div>
 
@@ -596,12 +631,12 @@
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100" style="background:#fff">
             <h4 style="text-align:left;color:#09203a">Bases de Datos</h4>
             <p style="text-align:left;">
-              <a href="https://www.mysql.com/" target="_blank"><img
-                  src="https://www.vectorlogo.zone/logos/mysql/mysql-horizontal.svg" alt="Mysql" height="70"
-                  width="130"></a>
-              <a href="https://www.mongodb.com/" target="_blank"><img
-                  src="https://www.vectorlogo.zone/logos/mongodb/mongodb-ar21.svg" alt="MongoDB" height="70"
-                  width="130"></a>
+              <a href="https://www.mysql.com/" target="_blank"><img src="https://www.vectorlogo.zone/logos/mysql/mysql-horizontal.svg"
+                  alt="Mysql" height="70" width="130"></a>
+              <a href="https://www.mongodb.com/" target="_blank"><img src="https://www.vectorlogo.zone/logos/mongodb/mongodb-ar21.svg"
+                  alt="MongoDB" height="70" width="130"></a>
+              <a href="https://www.microsoft.com/es-es/sql-server/sql-server-downloads/" target="_blank"> <img 
+                src="https://seeklogo.com/images/M/microsoft-sql-server-logo-96AF49E2B3-seeklogo.com.png" alt="SQL Server Logo" height="100" width="100"></a>
             </p>
           </div>
 
@@ -622,7 +657,6 @@
               <a href="https://www.oracle.com/database/technologies/appdev/jdbc.html" target="_blank">
                 <img src="assets\img\knowledge\jdbc.png" alt="JDBC" height="100" width="100">
               </a>
-
               <a href="https://firebase.google.com/" target="_blank">
                 <img src="assets\img\knowledge\firebaseLogo.svg" alt="Firebase" height="150" width="150">
             </p>
@@ -635,9 +669,8 @@
               <a href="https://code.visualstudio.com/" target="_blank"><img
                   src="https://www.vectorlogo.zone/logos/visualstudio_code/visualstudio_code-ar21.svg"
                   alt="Visual Studio Code" height="70" width="120"></a>
-              <a href="https://brackets.io/" target="_blank"><img
-                  src="https://www.vectorlogo.zone/logos/bracketsio/bracketsio-ar21.svg" alt="Brackets" height="90"
-                  width="120"></a>
+              <a href="https://brackets.io/" target="_blank"><img src="https://www.vectorlogo.zone/logos/bracketsio/bracketsio-ar21.svg"
+                  alt="Brackets" height="90" width="120"></a>
               <a href="https://www.sublimetext.com//" target="_blank"><img
                   src="https://img.icons8.com/fluency/48/000000/sublime-text.png" alt="SublimeText" height="60"
                   width="60"></a>
@@ -654,14 +687,15 @@
               <a href="https://netbeans.apache.org/" target="_blank"><img
                   src="https://upload.wikimedia.org/wikipedia/commons/9/98/Apache_NetBeans_Logo.svg"
                   alt="Apache NetBeans" height="60" width="90"></a>
-              <a href="https://developer.android.com/studio"><img
+              <a href="https://developer.android.com/studio" target="_blank"><img
                   src="https://img.icons8.com/color/48/000000/android-studio--v3.png" alt="Android Studio" height="60"
                   width="60"></a>
-
               <a href="https://www.jetbrains.com/es-es/idea/" target="_blank">
                 <img src="https://img.icons8.com/color/48/000000/intellij-idea.png" alt="IntelliJ IDEA" height="60"
                   width="60">
               </a>
+              <a href="https://visualstudio.microsoft.com/es/" target="_blank"> <img 
+                src="https://upload.wikimedia.org/wikipedia/commons/5/59/Visual_Studio_Icon_2019.svg" height="60" width="60"></a>
             </p>
           </div>
 
