--- a/training/FCTHappyCustomerBox_ca.html
+++ b/training/FCTHappyCustomerBox_ca.html
@@ -1,10 +1,10 @@
-<html lang="en">
+<html lang="ca">
 
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Oxford Test Of English</title>
+    <title>Formació en Centre de Treball - Happy Customer Box</title>
     <meta content="" name="descriptison">
     <meta content="" name="keywords">
 
@@ -42,11 +42,35 @@
     <main id="main">
         <div id="portfolio-details" class="portfolio-details">
             <div class="container">
+
                 <div class="row">
+
                     <div class="col-lg-12 portfolio-info">
                         <br>
-                        <iframe src="https://drive.google.com/file/d/1UvWR0D3ADh4CI5leAKEG6cn-MNIO9NTn/preview" height="500px" width="100%"></iframe>
+                        <h2 style="color:#12d640">Formació en Centre de Treball [FCT]</h2>
+                        <ul>
+                            <li><strong>Centre</strong>: Happy Customer Box</li>
+                            <li><strong>Data</strong>: Octubre 2021 - Març 2022</li>
+                            <li><strong>Lloc Web</strong>: <a href="https://www.happycustomerbox.com/es/" target="_blank">Enllaç</a></li>
+                        </ul>
+
+                        <p>
+                            Hapy Customer Box és una start-up tecnològica que ajuda a gestionar l'opinió dels clients.<br>
+                        </p>
+                        <p>
+                            <strong>Tecnologies utilitzades:</strong>
+                            <ul>
+                                <li>Android Studio (Kotlin)</li>
+                                <li>Firebase (Authentication, Firestore Database y Storage)</li>
+                                <li>GitHub com a control de versions</li>
+                                <li>Jira com a gestor de projecte</li>
+                                <li>Slack com a eina de comunicació amb integrants de l'equip.</li>
+                                <li>Metodologia Agile</li>
+                            </ul>
+                        </p>
                     </div>
+                   
+
                 </div>
             </div><!-- End Portfolio Details -->
     </main><!-- End #main -->
