--- a/training/FCTHappyCustomerBox_en.html
+++ b/training/FCTHappyCustomerBox_en.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Oxford Test Of English</title>
+    <title>Work Center Training - Happy Customer Box</title>
     <meta content="" name="descriptison">
     <meta content="" name="keywords">
 
@@ -42,13 +42,38 @@
     <main id="main">
         <div id="portfolio-details" class="portfolio-details">
             <div class="container">
+
                 <div class="row">
+
                     <div class="col-lg-12 portfolio-info">
                         <br>
-                        <iframe src="https://drive.google.com/file/d/1UvWR0D3ADh4CI5leAKEG6cn-MNIO9NTn/preview" height="500px" width="100%"></iframe>
+                        <h2 style="color:#12d640">Work Center Training - Happy Customer Box</h2>
+                        <ul>
+                            <li><strong>Center</strong>: Happy Customer Box</li>
+                            <li><strong>Date</strong>: October 2021 - March 2022</li>
+                            <li><strong>Website</strong>: <a href="https://www.happycustomerbox.com/es/"target="_blank">Link</a></li>
+                        </ul>
+                        <p>
+                            Happy Customer Box is a technology start-up that helps manage customer feedback.<br>
+                        </p>
+                        <p>
+                            <strong>Technologies used:</strong>
+                            <ul>
+                                <li>Android Studio (Kotlin)</li>
+                                <li>Firebase (Authentication, Firestore Database y Storage)</li>
+                                <li>GitHub as version control</li>
+                                <li>Jira as project manager</li>
+                                <li>Slack as a communication tool with team members</li>
+                                <li>Agile Methodology </li>
+                            </ul>
+                        </p>
+                        
                     </div>
+
                 </div>
-            </div><!-- End Portfolio Details -->
+
+            </div>
+        </div><!-- End Portfolio Details -->
     </main><!-- End #main -->
 
     <!-- Vendor JS Files -->
