added CraftMade project

--- a/en.html
+++ b/en.html
@@ -497,6 +497,18 @@
       <div class="row portfolio-container">
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <h4>CraftMade</h4>
+          <div class="portfolio-wrap">
+            <img src="assets/img/project/CraftMadeLogo.png" class="img-fluid" alt="Logo del projecte CraftMade">
+            <div class="portfolio-info">
+              <div class="portfolio-links">
+                <a href="projects/CraftMade_en.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Project Details"><i class="bx bx-info-circle"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <h4>GExpenses</h4>
           <div class="portfolio-wrap">
             <img src="assets/img/project/gexpenses-logo.png" class="img-fluid" alt="">
