--- a/ca.html
+++ b/ca.html
@@ -503,9 +503,21 @@
       <div class="row portfolio-container">
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <h4>CraftMade</h4>
+          <div class="portfolio-wrap">
+            <img src="assets/img/project/CraftMadeLogo.png" class="img-fluid" alt="Logo del projecte CraftMade">
+            <div class="portfolio-info">
+              <div class="portfolio-links">
+                <a href="projects/CraftMade_ca.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Detalls del Projecte"><i class="bx bx-info-circle"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <h4>GExpenses</h4>
           <div class="portfolio-wrap">
-            <img src="assets/img/project/gexpenses-logo.png" class="img-fluid" alt="">
+            <img src="assets/img/project/gexpenses-logo.png" class="img-fluid" alt="Logo del projecte GExpenses">
             <div class="portfolio-info">
               <div class="portfolio-links">
                 <a href="projects/Gexpenses_ca.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Detalls del Projecte"><i class="bx bx-info-circle"></i></a>
@@ -517,7 +529,7 @@
         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
           <h4>Penjat</h4>
           <div class="portfolio-wrap">
-            <img src="assets/img/project/logoPenjat.png" class="img-fluid" alt="">
+            <img src="assets/img/project/logoPenjat.png" class="img-fluid" alt="Logo del projecte Penjat">
             <div class="portfolio-info">
               <div class="portfolio-links">
                 <a href="projects/Penjat_ca.html" data-gall="portfolioDetailsGallery"
@@ -530,7 +542,7 @@
         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
           <h4>LaCantinaDeProdis</h4>
           <div class="portfolio-wrap">
-            <img src="assets/img/project/logoprodis.png" class="img-fluid" alt="">
+            <img src="assets/img/project/logoprodis.png" class="img-fluid" alt="Logo del projecte LaCantinaDeProdis">
             <div class="portfolio-info">
               <div class="portfolio-links">
                 <a href="projects/LaCantinaDeProdis/index_ca.html" data-gall="portfolioDetailsGallery"
@@ -543,7 +555,7 @@
         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <h4>HardwaRepair</h4>
           <div class="portfolio-wrap">
-            <img src="assets/img/project/logoHardwaRepair.png" class="img-fluid" alt="">
+            <img src="assets/img/project/logoHardwaRepair.png" class="img-fluid" alt="Logo del projecte HardwaRepair">
             <div class="portfolio-info">
               <div class="portfolio-links">
                 <a href="projects\HardwaRepair_ca.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Detalls del Projecte"><i class="bx bx-info-circle"></i></a>
@@ -555,7 +567,7 @@
         <div class="col-lg-4 col-md-6 portfolio-item filter-unity">
           <h4>ZombieInfection</h4>
           <div class="portfolio-wrap">
-            <img src="assets/img/project/ZombieInfection.png" class="img-fluid" alt="">
+            <img src="assets/img/project/ZombieInfection.png" class="img-fluid" alt="Logo del projecte ZombieInfection">
             <div class="portfolio-info">
               <div class="portfolio-links">
                 <a href="projects\ZombieInfection_ca.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Detalls del Projecte"><i class="bx bx-info-circle"></i></a>
