--- a/projects/CraftMade_en.html
+++ b/projects/CraftMade_en.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>GExpenses - Web</title>
+    <title>CraftMade - Web</title>
     <meta content="" name="descriptison">
     <meta content="" name="keywords">
 
@@ -48,47 +48,49 @@
 
                     <div class="col-lg-12 portfolio-info">
                         <br>
-                        <h2 style="color:#12d640">GExpenses - Web application</h2>
+                        <h2 style="color:#12d640">CraftMade - Web application</h2>
                         <ul>
-                            <li><strong>GitLab Project</strong>: <a href="https://gitlab.com/jcadafalch/gexpenses"
+                            <li><strong>GitHub Project</strong>: <a href="https://github.com/jcadafalch/Marketplace"
                                     target="_blank">Link</a>
                             </li>
                         </ul>
                         <p>
                             <b>Description:</b><br>
                             This project was carried out in the web application development course.
-                            The project consisted of a web application per activity creation, so that you can keep track of your expenses,           
-                            who has paid, who has to be paid, in short, it makes it easier for you to keep accounts of any activity.
+                            The project consisted of a MarketPlace for artisans who want to sell their products online.
+
                             <br><br>
                             <b>Technologies:</b><br>
                             <ul>
                                 <li>HTML</li>
                                 <li>CSS</li>
+                                <li>SASS</li>
                                 <li>JavaScript</li>
                                 <li>MariaDB</li>
                                 <li>Php</li>
+                                <li>Laravel</li>
                                 <li>Vagrant</li>
                                 <li>Git</li>
                             </ul>
                             <br>
                             <b>Objectives of application:</b><br>
-                            The objective of this internship is the development of an expense manager called GExpenses.
-                            The aim is to be able to share the costs with the members. That is to say, all the expenses that can be
-                            arise on a trip, for example, if I make a purchase for a meal, and this purchase is paid for by a member of the group,
-                            that the costs can be shared equally by all members.
-                            With this web explanation, we look for the ease of being able to make a trip, with a group of people, and
-                            that the complication of cost sharing is made easier by this application.
+                            The aim of this practice is to be able to offer your product online. 
+                            That is to say, an artisan will have one or several products, which he will offer on our website. 
+                            The customer will be able to browse the entire website in search of the desired product. 
+                            Our web application will be able to filter the products in different categories, in order to facilitate the user's search. 
+                            This idea has arisen, in search of every small artisan who does not have the possibility to offer his product online.
                             <br><br>
                     
                         </p>
                         <br>
                         <p>
-                          <img src="./../assets/img/project/GExpenses/pantalla1.png" alt="Landing Page 1" width="900px" height="450px">
-                          <img src="./../assets/img/project/GExpenses/nouUsuari.png" alt="Landing Page 2" width="900px" height="450px">
+                          <img src="./../assets/img/project/homeMarketPlace.png" alt="CraftMade home page" width="900px" height="450px">
                         </p>
-                        <!--<iframe
-                            src="https://docs.google.com/document/d/13NpWHYNjwMLd9bW2rvnBCrErym74gD_5XwyYfBnPIfY/preview"
-                            height="100%" width="100%"></iframe>-->
+                        <p><br><br></p>
+                        <p><b>NOTICE:</b> at the moment the following document is in Catalan.</p><br>
+                        <iframe
+                            src="https://drive.google.com/file/d/1l-XdscoBF3Ll9MBE-b-kDCS9h7ivR1GZ/preview"
+                            height="100%" width="100%"></iframe>
                         <p><br><br></p>
 
                     </div>
