Added memoria FP dual

--- a/training/FPDEmttia_es.html
+++ b/training/FPDEmttia_es.html
@@ -102,6 +102,11 @@
                     </ul>
                 </ul>
               </p>
+              <p><b>AVISO: </b>en estos momentos el siguiente documento esta en catalán.</p><br>
+              <iframe
+                            src="https://drive.google.com/file/d/175jbraMThZl96W17ikT3CPancmQsreSR/preview"
+                            height="100%" width="100%"></iframe>
+                        <p><br><br></p>
             </div>
           </div>
         </div>
