--- a/training/FPDEmttia_ca.html
+++ b/training/FPDEmttia_ca.html
@@ -99,6 +99,10 @@
                     </ul>
                 </ul>
               </p>
+              <iframe
+                            src="https://drive.google.com/file/d/175jbraMThZl96W17ikT3CPancmQsreSR/preview"
+                            height="100%" width="100%"></iframe>
+                        <p><br><br></p>
             </div>
           </div>
         </div>
