--- a/training/FPDEmttia_en.html
+++ b/training/FPDEmttia_en.html
@@ -100,6 +100,11 @@
                     </ul>
                 </ul>
               </p>
+              <p><b>NOTICE:</b> at the moment the following document is in Catalan.</p><br>
+              <iframe
+                            src="https://drive.google.com/file/d/175jbraMThZl96W17ikT3CPancmQsreSR/preview"
+                            height="100%" width="100%"></iframe>
+                        <p><br><br></p>
             </div>
           </div>
         </div>
