updated link memoria dual

--- a/training/FPDEmttia_ca.html
+++ b/training/FPDEmttia_ca.html
@@ -100,7 +100,7 @@
                 </ul>
               </p>
               <iframe
-                            src="https://drive.google.com/file/d/175jbraMThZl96W17ikT3CPancmQsreSR/preview"
+                            src="https://docs.google.com/document/d/1v5Acq7fPUhxYeWQZz9Kw_nrvlzHKTGsEBa5LJpvfJ_M/preview"
                             height="100%" width="100%"></iframe>
                         <p><br><br></p>
             </div>
